Added secure file sharing feature
Link to a file sharing app

--- a/api/templates/upload.html
+++ b/api/templates/upload.html
@@ -166,8 +166,17 @@
         <a
           href="/download-sample-schedule"
           download
-          >Download Sample Schedule</a
-        >
+          >Download Sample Schedule</a>
+      </div>
+      <h3>Access shared course schedule:</h3>
+
+      <!-- Download link -->
+      <div class="download-link">
+        <p>Do you already have a course schedule that is being shared to you? Access the file securely using a shared password.</p>
+        <a
+          href="https://storage.yagneshmodi.tech/"
+          download
+          >Download Shared Schedule</a>
       </div>
     </div>
 
