--- a/api/templates/upload.html
+++ b/api/templates/upload.html
@@ -158,6 +158,26 @@
         </li>
         <li>No collisions occur in the class schedule provided.</li>
       </ul>
+      <h3>Share course schedule:</h3>
+
+      <!-- Download link -->
+      <div class="download-link">
+        <p>You can securely share a course schedule using a password. The file cannot be accessed without the password.</p>
+        <a
+          href="https://storage.yagneshmodi.tech/"
+          download
+          >Share Schedule</a>
+      </div>
+      <h3>Access shared course schedule:</h3>
+
+      <!-- Download link -->
+      <div class="download-link">
+        <p>Do you already have a course schedule that has being shared to you? Access the file securely using a shared password.</p>
+        <a
+          href="https://storage.yagneshmodi.tech/file/66045b7cdbfb57ca5ab2e0f7"
+          download
+          >Download Shared Schedule</a>
+      </div>
       <h3>Sample Course Schedule:</h3>
 
       <!-- Download link -->
@@ -167,16 +187,6 @@
           href="/download-sample-schedule"
           download
           >Download Sample Schedule</a>
-      </div>
-      <h3>Access shared course schedule:</h3>
-
-      <!-- Download link -->
-      <div class="download-link">
-        <p>Do you already have a course schedule that is being shared to you? Access the file securely using a shared password.</p>
-        <a
-          href="https://storage.yagneshmodi.tech/"
-          download
-          >Download Shared Schedule</a>
       </div>
     </div>
 
